# hardhat-template

./: .env.example  .gitignore  .gitmodules  .mocharc.json  .prettierignore  GOTCHAs.md  README-foundry.md  README-safe.md  README-testing.md  README.md  foundry.toml  hardhat-fork.config.ts  hardhat.config.ts  package.json  prepublish.js  prettier.config.js  solhint.config.js  tsconfig.json
.context/: index.md
.cursor/rules/: RIPER-5-MODE_STRICT-OPERATIONAL-PROTOCOL.mdc  markdown-rules.mdc
.github/workflows/: lint-test.yml  semgrep.yml  tests.yml
.husky/: pre-commit
artifacts-external/: Create2Deployer.json  GnosisSafeL2.json  GnosisSafeProxyFactory_1.3.0.json  MultiSendCallOnly.json
contracts/: Lock.sol  LockUpgradeable.sol  LockUpgradeableProxy.sol
contracts/ERC/: Erc7201.sol
contracts/access/: TimelockControllerEnumerable.sol
contracts/interfaces/: IVersionable.sol  README-interfaces.md
contracts/libraries/: DelegateCallLib.md  DelegateCallLib.sol  VersionUtils.sol  VersionUtilsTester.sol
contracts/mocks/: ERC20Mock_MaxMint.sol  MockToken.sol
docs/: index-docs.md
hardhat/: index.ts  networks.ts  task.ts  types.ts
hardhat/evm/: verifier.ts
modules/: README-modules.md
plugins/: abiPlugins.ts
scripts/vanity/create2/: Cargo.toml  README-create2-vanity.md  create2-patterns.json  generateBytecodeJson.ts  getNamedProxyInitCode.ts  vanity_generator_create2.rs
src/: env.ts  index.ts  task.ts
test/: BeaconFactoryAdmin.spec.ts  CreateXDeployer.spec.ts  Erc7201.spec.ts  Lock.spec.ts  Lock.t.sol  template.spec.ts
test-fork/: README-test-fork.md
(+170 files in other folders)
