[package]
name = "create2-vanity-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = "2.0.4"
clap = "3.2"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.5"
tokio = { version = "1.28", features = ["full"] }
rand = "0.8.5"
chrono = "0.4"
num_cpus = "1.13"
indicatif = "0.17.3"
ctrlc = { version = "3.2.5", features = ["termination"] }

[[bin]]
name = "create2-vanity-generator"
path = "vanity_generator_create2.rs" 